# gnome-drumroll

./: CMakeLists.txt
debian/: changelog  control  copyright
rsrc/: 10-drumroll.rules  CMakeLists.txt  gnome-drumroll.ui  gnome-drumroll.xml
src/: Application.cpp  Application.hpp  CMakeLists.txt  Midi.cpp  Midi.hpp  main.cpp
